<resources>
    <string name="app_name">辣椒直播</string>

    <string name="action_settings">Settings</string>
    <string name="loading">正在加载中。。</string>
    <string name="copy_success">复制成功</string>
    <string name="tip_no_internet">当前没有可用的网络连接</string>
    <string name="login_success">登陆成功</string>
    <string name="message">收益</string>
    <string name="blog">等级</string>
    <string name="note">钻石</string>
    <string name="team">设置</string>
    <string name="user_score">积分</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="user_live">直播</string>
    <string name="loginout">退出登录</string>
    <string name="editInfo">编辑资料</string>
    <string name="editnickpromp">名称不得少于6个字</string>
    <string name="editsignpromp">最多输入20个字</string>
    <string name="selectphotoonalbu">从相册选择</string>
    <string name="selectphotooncamera">拍照</string>
    <string name="balance">账户余额:</string>
    <string name="select_pay">请选择支付方式</string>
    <string name="myleve">等级</string>
    <string name="editsuccess">修改成功</string>
    <string name="editfail">修改失败</string>
    <string name="mydiamonds">我的钻石</string>
    <string name="wxpay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="myprofit">我的收益</string>
    <string name="commonproblem">常见问题</string>
    <string name="setting">设置</string>
    <string name="pushmanage">推送管理</string>
    <string name="about">关于我们</string>
    <string name="feedback">用户反馈</string>
    <string name="blanklist">黑名单</string>
    <string name="attention">关注</string>
    <string name="hot">热门</string>
    <string name="daren">最新</string>
    <string name="attentionlive">关注的好友直播</string>
    <string name="attention_title1">你还未关注任何主播</string>
    <string name="attention_title2">马上关注,享受热门直播的乐趣</string>
    <string name="attention_title3">去看看新精彩直播</string>
    <string name="lookin">在看</string>
    <string name="gobackindex">返回首页</string>
    <string name="liveend">直播结束</string>
    <string name="sendchat">发送</string>
    <string name="createedittexthint">给直播写个标题吧</string>
    <string name="startLive">开始直播</string>
    <string name="yingpiao">辣度</string>
    <string name="yingpiaoshu">辣度:0</string>
    <string name="plasesettitle">请设置一个标题吧</string>
    <string name="iscloselive">是否关闭直播</string>
    <string name="livestart">直播开始</string>
    <string name="sendgift">发送</string>
    <string name="senderror">赠送失败请重试</string>
    <string name="liansendgift">连送</string>
    <string name="report">举报</string>
    <string name="follow2">关注</string>
    <string name="reply">回复</string>
    <string name="home">主页</string>
    <string name="default_address">难道在非洲?</string>
    <string name="follow">关注主播</string>
    <string name="alreadyfollow">已关注</string>
    <string name="ticketorder">辣度贡献榜</string>
    <string name="age">年龄</string>
    <string name="number">映客号</string>
    <string name="sign">个性签名</string>
    <string name="live">直播</string>
    <string name="fans">粉丝</string>
    <string name="privatechat">私信TA</string>
    <string name="lahei">拉黑</string>
    <string name="manage">管理</string>
    <string name="no1">No.1</string>
    <string name="no2">No.2</string>
    <string name="no3">No.3</string>
    <string name="yporder">辣度贡献榜</string>
    <string name="paymode">支付方式:</string>
    <string name="defaultsign">没写签名</string>
    <string name="send">送出</string>
    <string name="testin">测试中,尽情期待...</string>
    <string name="liverecord">直播记录</string>
    <string name="friends">好友</string>
    <string name="nofollow">未关注</string>
    <string name="payresult">支付结果</string>
    <string name="complete">完成</string>
    <string name="area">地区</string>
    <string name="search">搜索</string>
    <string name="default_prompt">全时间都在等待你直播</string>
    <string name="reportsuccess">举报成功</string>
    <string name="pullblack">拉黑</string>
    <string name="relieveblack">解除拉黑</string>
    <string name="blacklist">黑名单</string>
    <string name="plaseinputphonenum">请填写手机号码</string>
    <string name="plasecheckyounumiscorrect">请检查手机号码是否输入正确</string>
    <string name="codehasbeensend">验证码已发送</string>
    <string name="livestartpush">是否接收消息</string>
    <string name="push">推送管理</string>
    <string name="determine">确定</string>
    <string name="shartitle">中国最火辣的美食直播</string>
    <string name="startliveerror">开播失败</string>
    <string name="searchmusic">搜索歌曲</string>
    <string name="diange">点歌</string>
    <string name="select">选择</string>
    <string name="download">下载</string>
    <string name="downloadError">下载失败</string>
    <string name="initDataError">初始化数据失败~</string>
    <string name="musicEnd">结束</string>
    <string name="authenticate">申请认证</string>

    <string-array name="tabs">

    </string-array>

    <string-array name="live_start_share_open">
        <item>微博分享已开</item>
        <item>微信分享已开</item>
        <item>微信分享已开</item>
        <item>QQ分享已开</item>
        <item>QQ空间分享已开</item>
    </string-array>
    <string-array name="live_start_share_close">
        <item>微博分享已关</item>
        <item>微信分享已关</item>
        <item>微信分享已关</item>
        <item>QQ分享已关</item>
        <item>QQ空间分享已关</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="index">首页</string>
    <string name="gx_order">贡献榜</string>

    <string name="msj">美食家</string>

    <!--tab titles for fragments-->
    <string-array name="tab_titles">
        <item>首页</item>
        <item>直播</item>
        <item>美食家</item>
        <item>个人</item>
    </string-array>
    <string name="errcode_success">发送成功</string>

    <string name="errcode_cancel">发送取消</string>

    <string name="errcode_deny">发送被拒绝</string>

    <string name="errcode_unknown">发送返回</string>
</resources>
