<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/rl_attention_no_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!-- android:src="@drawable/hall_no_live_bg"-->
        <ImageView
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:textSize="@dimen/text_size_15"
                android:id="@+id/tv_title1"
                android:textColor="@color/gray"
                android:gravity="center"
                android:text="@string/attention_title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_alignBottom="@id/tv_title1"
                android:textColor="@color/gray"
                android:gravity="center"
                android:text="@string/attention_title2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <Button
                android:visibility="gone"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attention_title3"/>
        </LinearLayout>


    </RelativeLayout>
</merge>