<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
   <LinearLayout
       android:orientation="vertical"
       android:layout_width="300dp"
       android:layout_height="360dp"
       android:padding="10dp">
       <RelativeLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:paddingTop="15dp">
           <TextView
               android:id="@+id/tv_live_manage_or_report"
               android:textSize="@dimen/text_size_15"
               android:textColor="@color/global"
               android:text="@string/report"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <ImageButton
               android:id="@+id/ib_show_dialog_back"
               android:layout_alignParentRight="true"
               android:background="@drawable/room_pop_up_shut"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </RelativeLayout>
       <com.weilian.phonelive.widget.AvatarView
           android:id="@+id/av_show_dialog_u_head"
           android:layout_marginTop="20dp"
           android:layout_gravity="center"
           android:layout_width="70dp"
           android:layout_height="70dp" />
       <com.weilian.phonelive.widget.AvatarView
           android:id="@+id/av_show_dialog_order_first_u_head"
           android:layout_marginLeft="20dp"
           android:layout_width="40dp"
           android:layout_height="40dp" />
       <LinearLayout
           android:layout_gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <TextView
               android:gravity="center"
               android:textColor="@color/black"
               android:id="@+id/tv_show_dialog_u_name"
               android:textSize="@dimen/text_size_15"
               android:layout_width="wrap_content"
               android:layout_height="match_parent" />
           <ImageView
               android:id="@+id/iv_show_dialog_sex"
               style="@style/live_sex_style"/>
           <ImageView
               android:id="@+id/iv_show_dialog_level"
               style="@style/live_level_style"/>
       </LinearLayout>
       <LinearLayout
           android:layout_marginTop="10dp"
           android:layout_gravity="center"
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@drawable/live_map_dark"
               android:layout_width="10dp"
               android:layout_height="20dp" />
           <TextView
               android:layout_marginLeft="5dp"
               android:gravity="center"
               android:textColor="@color/gray"
               android:text="@string/default_address"
               android:id="@+id/tv_show_dialog_u_address"
               android:textSize="@dimen/text_size_12"
               android:layout_width="wrap_content"
               android:layout_height="match_parent" />
       </LinearLayout>
       <TextView
           android:id="@+id/tv_show_dialog_u_sign"
           android:textSize="@dimen/text_size_15"
           android:layout_gravity="center"
           android:singleLine="true"
           android:ellipsize="end"
           android:maxEms="10"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       <LinearLayout
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:textColor="@color/black"
                   android:id="@+id/tv_show_dialog_u_fllow_num"
                   android:textSize="@dimen/text_size_12"
                   android:text="关注:0"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:textColor="@color/black"
                   android:id="@+id/tv_show_dialog_u_fans"
                   android:layout_alignParentRight="true"
                   android:textSize="@dimen/text_size_12"
                   android:text="粉丝:0"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </RelativeLayout>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/tv_show_dialog_u_send_num"
                   android:textColor="@color/swiperefresh_color3"
                   android:textSize="@dimen/text_size_12"
                   android:text="送出:0"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:textColor="@color/black"
                   android:id="@+id/tv_show_dialog_u_ticket"
                   android:layout_alignParentRight="true"
                   android:textSize="@dimen/text_size_12"
                   android:text="@string/yingpiaoshu"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </RelativeLayout>
       </LinearLayout>
       <View
           android:layout_marginTop="15dp"
           style="@style/v_line"
           android:layout_width="match_parent"
           android:layout_height="1px">

       </View>
       <LinearLayout
           android:layout_marginTop="10dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="4">
           <TextView
               android:id="@+id/tv_show_dialog_u_fllow_btn"
               android:gravity="center"
               android:layout_weight="1"
               android:textColor="@color/global"
               android:textSize="@dimen/text_size_15"
               android:text="@string/follow2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <View
               style="@style/h_line"
               android:layout_width="1px"
               android:layout_height="match_parent"></View>
           <TextView
               android:id="@+id/tv_show_dialog_u_private_chat_btn"
               android:gravity="center"
               android:layout_weight="1"
               android:textColor="@color/global"
               android:textSize="@dimen/text_size_15"
               android:text="@string/privatechat"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <View
               style="@style/h_line"
               android:layout_width="1px"
               android:layout_height="match_parent"></View>
           <TextView
               android:id="@+id/tv_show_dialog_u_reply_btn"
               android:gravity="center"
               android:layout_weight="1"
               android:textColor="@color/global"
               android:textSize="@dimen/text_size_15"
               android:text="@string/reply"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <View
               style="@style/h_line"
               android:layout_width="1px"
               android:layout_height="match_parent"></View>
           <TextView
               android:id="@+id/tv_show_dialog_u_home_btn"
               android:gravity="center"
               android:layout_weight="1"
               android:textColor="@color/global"
               android:textSize="@dimen/text_size_15"
               android:text="@string/home"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>

   </LinearLayout>


</RelativeLayout>