<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_user_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:visibility="visible" >

        <RelativeLayout
            android:id="@+id/rl_user_center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" >

            <include layout="@layout/view_info_detail_data"></include>

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_following"
                style="@style/uset_information_ll" >


                <TextView
                    android:id="@+id/tv_info_u_follow_num"
                    style="@style/user_formation_info"
                    android:text="@string/following" />
            </LinearLayout>
            <View style="@style/v_line"/>

            <LinearLayout
                android:id="@+id/ll_fans"
                style="@style/uset_information_ll" >

                <TextView
                    android:id="@+id/tv_info_u_fans_num"
                    style="@style/user_formation_info"
                    android:text="@string/follower" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_user_unlogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.weilian.phonelive.widget.CircleImageView
            android:id="@+id/iv_avatar1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_20"
            android:contentDescription="@null"
            android:src="@drawable/null_blacklist"
            app:border_color="@color/white"
            app:border_width="3dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_5"
            android:text="@string/my_information_unlogin_tips"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>


</FrameLayout>
