<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/ll_home_page_index"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray2"
        >
        <RelativeLayout
            android:background="@color/white"
            android:layout_marginTop="2dp"
            android:id="@+id/rl_home_pager_yi_order"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:textColor="@color/gray"
                android:layout_centerVertical="true"
                android:text="@string/ticketorder"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.weilian.phonelive.widget.AvatarView
                    android:id="@+id/av_home_page_order1"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <com.weilian.phonelive.widget.AvatarView
                    android:id="@+id/av_home_page_order2"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <com.weilian.phonelive.widget.AvatarView
                    android:id="@+id/av_home_page_order3"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <ImageView
                    android:src="@drawable/me_next_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:background="@color/white"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/number"
                    style="@style/home_user_info_item_labe"/>
                <TextView
                    android:id="@+id/tv_home_page_num"
                    style="@style/home_user_info_item_content"
                    />

            </LinearLayout>
            <View style="@style/h_line"/>
            <LinearLayout
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/home_user_info_item_labe"
                    android:text="@string/sign"
                    />
                <TextView
                    android:id="@+id/tv_home_page_sign2"
                    style="@style/home_user_info_item_content"
                   />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</merge>